<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/nombre_label_string"
        app:layout_constraintEnd_toStartOf="@+id/eTextNOmbre"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eTextNOmbre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Meter nombre"
        android:inputType="textMultiLine|textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginStart="7dp"
        android:text="@string/direccion_string"
        app:layout_constraintBaseline_toBaselineOf="@+id/multiEditText"
        app:layout_constraintEnd_toStartOf="@+id/multiEditText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/telefono_label" />

    <EditText
        android:id="@+id/multiEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Introduce una direccion"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="@+id/eTextNOmbre"
        app:layout_constraintTop_toBottomOf="@+id/eTextNOmbre" />

    <TextView
        android:id="@+id/telefono_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/telefono_string"
        app:layout_constraintBaseline_toBaselineOf="@+id/phoneEditText"
        app:layout_constraintEnd_toStartOf="@+id/phoneEditText" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="Introduce telefono"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="@+id/multiEditText"
        app:layout_constraintTop_toBottomOf="@+id/multiEditText" />

    <TextView
        android:id="@+id/envios_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="29dp"
        android:text="@string/notas_string"
        app:layout_constraintStart_toStartOf="@+id/phoneEditText"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />

    <RadioGroup
        android:id="@+id/rG"
        android:layout_width="237dp"
        android:layout_height="133dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/envios_label">

        <RadioButton
            android:id="@+id/rButtonDia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onClickRadioButton"
            android:text="@string/en_el_mismo_dia_string" />

        <RadioButton
            android:id="@+id/rButtonDia2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickRadioButton"
            android:text="@string/en_el_siguiente_dia" />

        <RadioButton
            android:id="@+id/rButtonDia3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onClickRadioButton"
            android:text="@string/racogida_string" />

    </RadioGroup>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="98dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/envios_label"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText"
        android:entries="@array/spin"
        />

</androidx.constraintlayout.widget.ConstraintLayout>